# watch2give-ai-monitoring

./: .gitignore  README.md  gamification_rewards.py
Vendor-dashboard/: README.md
Vendor-dashboard/app/: globals.css  manifest.ts  page.tsx
Vendor-dashboard/app/api/token-analysis/: route.ts
Vendor-dashboard/components/: photo-upload.tsx  qr-scanner.tsx  token-actions.tsx  token-flow-explainer.tsx  token-insights.tsx  token-notification.tsx  token-value.tsx  vendor-dashboard.tsx  yield-display.tsx
Vendor-dashboard/config/: app-config.ts
Vendor-dashboard/lib/: token-analysis.ts
Vendor-dashboard/services/: api-service.ts  polkadot-service.ts
ai-agents/: README.md  main.py  pyproject.toml  result.json
ai-agents/agents/: give_router.py  photo_validator.py  reward_agent.py  vault_decider.py
ai-agents/api/: server.py
ai-agents/utils/: logger.py
data/: result.json
monitor-dashboard/: app.py  master_flow.txt  package-lock.json  result.json
monitor-dashboard/__MACOSX/: ._app.py  ._master_flow.txt  ._result.json
smart contracts/: lib-2.rs  reward.py
